--- a/.github/workflows/build-macos-installers.yml
+++ b/.github/workflows/build-macos-installers.yml
@@ -7,7 +7,9 @@ on:
         description: 'Tagged release testing scenario'
         required: false
         type: choice
+        default: ''
         options:
+        - ''
         - 9.9.9-b1
         - 9.9.9-rc1
         - 9.9.9
